<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_startup_fav_key"
        android:title="@string/pref_startup_fav_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_reset_after_remove_key"
        android:title="@string/pref_reset_after_remove_title"
        android:summary="@string/pref_reset_after_remove_summary" />
   
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_folder_view_after_current_key"
        android:title="@string/pref_folder_view_after_current_title"
        android:summary="@string/pref_folder_view_after_current_summary" />
     
</PreferenceScreen>